2007-12-12 David Moore <dcm@acm.org>
	* SVN 509: Removed LIBDC1394_VERSION* from control.h and updated
		   libtool version info in configure.in.
	* SVN 508: Fix isochronous declarations.
	* SVN 507: Remove internal.h include from vendor include files

2007-12-12 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 506: fix dc1394_error_get_string().
        * SVN 505: change bit_depth -> data_depth for coherency.

2007-12-11 David Moore  <dcm@acm.org>
	* SVN 504: Added isochronous allocation API in iso.c/iso.h.  Also
		   includes platform-specific API additions.  Only implemented
		   for the linux platform as of now.

2007-12-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 503: Cleanup example programs
	* SVN 502: Fix broadcast control
	* SVN 501: Add the definition of two offsets (640, 644) which contain
	           error bits for features. The functionality is not
		   implemented yet; this will wait until 2.0.0 is released.
	* SVN 500: Implement broadcast function. Error returned under juju,
	           osx and msw.
	* SVN 499: Small change in the numbering of the enum types (control.h).
	           This allows 256 format7 modes, which may happen in 1.32.

2007-12-10 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 498: make system_*log_handler and *log_data static. Tell a word
	           about DC1394_DEBUG in log.h (Rudolf Leitgeb)
	* SVN 497: Finalize the error API
	* SVN 496: Added two boolean members to dc1394video_frame_t:
	           little_endian and data_in_padding.

2007-12-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 495: Compile fix for juju (thanks to Chao Wang)
        * SVN 494: Compile fix for juju (thanks to Chris Rankin)

2007-12-06 David Moore  <dcm@acm.org>
	* SVN 493: Compile fix for Mac OS X.

2007-12-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 492: Changed some comments from error to debug.
	* SVN 491: Printing functions now all have a file descriptor argument.