@@ -1,30 +1,0 @@
-/*
- * 1394-Based Digital Camera Control Library
- * Checksum algorithms
- * Copyright (C) 2006 Mikael Olenfalk, Tobii Technology AB, Stockholm Sweden
- *
- * Written by Mikael Olenfalk <mikael _DOT_ olenfalk _AT_ tobii _DOT_ com>
- * Version : 16/02/2005 
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- */
-#ifndef __DC1394_CHECKSUM_H__
-#define __DC1394_CHECKSUM_H__
-
-#include <stdint.h>
-
-uint16_t dc1394_checksum_crc16 (const uint8_t* buffer, uint32_t buffer_size);
-
-#endif
